--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-google-analytics": "^2.3.1",
+    "gatsby-plugin-google-tagmanager": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.0",
+    "gatsby-plugin-netlify": "^2.3.2",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
