--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "formik": "^2.1.4",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.0",
+    "gatsby-interface": "^0.0.159",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-google-tagmanager": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.0",
@@ -19,7 +23,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-icons": "^3.10.0",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "prettier": "2.0.5"
